fix overlap

--- a/src/app/(routes)/account/(routes)/history/HistoryItem/HistoryItem.module.scss
+++ b/src/app/(routes)/account/(routes)/history/HistoryItem/HistoryItem.module.scss
@@ -11,6 +11,9 @@
 
     .itemLink {
       color: var(--accent-color-white);
+      display: flex;
+      gap: 1rem;
+      align-items: center;
     }
   }
 }
